# OOP_coursework-3sem-

./: agent.py  game.cp39-win_amd64.pyd  test.ipynb  training.ipynb
data/: best_game_history_ml_model_2048_ohe_2step_penalty_logreward_512x3_random.pkl  game_ml_model_2048_ohe_2step_penalty_logreward_512x3_random.pkl
setup/: CMakeLists.txt  game.cpp  setup.py
